REGRESSION (STP): WebSocket.bufferedAmount does not get updated in some cases https://bugs.webkit.org/show_bug.cgi?id=240311

Reviewed by Youenn Fablet.

This reverts the functional part of r290995 for OSes what don't have an NSURLSession WebSocket implementation we can use.
The rest of r290995 was just moving UTF-8 encoding to a different location in the pipeline, which has no observable behavior change.

It is unfortunate, but our old implementation of WebSockets that uses CFWriteStreamWrite thinks it has written immediately,
so if I make SocketStreamHandleImpl::platformSend call m_client.didUpdateBufferedAmount even when bytesWritten >= length,
I don't have the bufferent amount updated synchronously like Chrome, Firefox, and the NSURLSession-based implementation have.
If I leave it as it is now, the buffered amount never goes back down to zero sometimes after writing to the stream.

It was broken before, it is differently broken now, and this restores the status quo on Big Sur.  This is why we can't have nice things.

* Modules/websockets/WebSocket.cpp:
(WebCore::WebSocket::send):

Canonical link: https://commits.webkit.org/250705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294413 268f45cc-cd09-0410-ab3c-d52691b4dbfc